# web-scraper

./: Makefile  pyproject.toml
web_scraper/: __init__.py  __main__.py  main.py
