[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "web-scraper"
readme = "README.md"
authors = [
    {name = "Connor Keogh", email = "contact@kyoh.run"}
]
dynamic = ["version", "description"]
requires-python = ">=3.6"
dependencies = [
    "toml ~= 0.10.2",
    "typer ~= 0.6.1",
    "rich ~= 12.5.1",
    "beautifulsoup4 ~= 4.12.2"
]

[project.urls]
Home = "https://github.com/kyoh-dev/web-scraper"

[project.optional-dependencies]
dev = [
    "flit",
    "mypy",
    "autoflake",
    "black"
]

[project.scripts]
wscrape = "web_scraper.main:app"

[tool.mypy]
strict = true
install_types = true
non_interactive = true
ignore_missing_imports = true
show_error_codes = true

[tool.black]
line-length = 120
target-version = ['py39']
